--- a/page6.html
+++ b/page6.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/page6-meta.jpeg">
   <meta name="twitter:title" content="Odkazy">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/nvrh-bez-nzvu-3.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -119,7 +119,7 @@
                     <div class="text-box">
                         <h4 class="icon-title mbr-black mbr-fonts-style display-7">
                             <strong>Instagram</strong></h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.</h5>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4"><a href="https://www.instagram.com/poletime_ultimate/" class="text-primary" target="_blank">https://www.instagram.com/poletime_ultimate/</a></h5>
                     </div>
                 </div>
                 <div class="item mbr-flex">
@@ -129,7 +129,7 @@
                     <div class="text-box">
                         <h4 class="icon-title mbr-black mbr-fonts-style display-7">
                             <strong>Web</strong></h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.</h5>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">TBD</h5>
                     </div>
                 </div>
             </div>
@@ -150,10 +150,8 @@
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mb-4 display-2">
                             <strong>Ostatní média</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-7">Česká asociace létajícího disku (ČALD)<br>Frisbee.cz (výsledky turnajů)<br>Ultimo.cz (obchod s disky)<br>Facebook:                          https://www.facebook.com/czechultimate<br>Instagram:                         https://www.instagram.com/czechultimate<br>Pravidla Ulti Frisbee      https://www.czechultimate.cz/dokumenty<br></p>
-                        <div class="mbr-section-btn">
-                            <a class="btn btn-primary display-4" href="https://mobiri.se">Create your own site</a>
-                        </div>
+                        
+                        
                     </div>
                 </div>
             </div>
@@ -163,32 +161,26 @@
                         <span class="mbr-iconfont mobi-mbri-globe-2 mobi-mbri"></span>
                     </div>
                     <div class="text-box">
-                        <h4 class="icon-title mbr-black mbr-fonts-style display-7">
-                            <strong>No Coding</strong>
-                        </h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.</h5>
+                        <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Česká asociace ultimate (ČAU)</strong></h4>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4"><a href="https://www.czechultimate.cz/" class="text-primary" target="_blank">https://www.czechultimate.cz/</a></h5>
                     </div>
                 </div>
                 <div class="item mbr-flex">
                     <div class="icon-box">
-                        <span class="mbr-iconfont mobi-mbri-update mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-star mobi-mbri"></span>
                     </div>
                     <div class="text-box">
-                        <h4 class="icon-title mbr-black mbr-fonts-style display-7">
-                            <strong>Mobile Friendly</strong>
-                        </h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.</h5>
+                        <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Výsledky turnajů</strong></h4>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4"><a href="http://www.frisbee.cz/online-vysledky.html" class="text-primary" target="_blank">http://www.frisbee.cz/online-vysledky.html</a></h5>
                     </div>
                 </div>
                 <div class="item mbr-flex">
                     <div class="icon-box">
-                        <span class="mbr-iconfont mobi-mbri-user-2 mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-numbered-list mobi-mbri"></span>
                     </div>
                     <div class="text-box">
-                        <h4 class="icon-title mbr-black mbr-fonts-style display-7">
-                            <strong>Unique Styles</strong>
-                        </h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.</h5>
+                        <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Pravidla Ultimate Frisbee</strong></h4>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4"><a href="https://www.czechultimate.cz/dokumenty" class="text-primary" target="_blank">https://www.czechultimate.cz/dokumenty</a></h5>
                     </div>
                 </div>
             </div>
@@ -244,7 +236,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">Free HTML Page Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Site Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
