--- a/kontakty.html
+++ b/kontakty.html
@@ -56,7 +56,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Novinky</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="pridej-se.html">Přidej se<br></a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="o-tymu.html">O týmu</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="co-je-frisbee.html">Co je frisbee?</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="treninky.html">Tréninky<br></a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page7.html">MIXÉR</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="kontakty.html">Kontakty</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="o-tymu.html">O týmu</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="co-je-frisbee.html">Co je frisbee?</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="treninky.html">Tréninky<br></a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="mixer.html">MIXÉR</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="kontakty.html">Kontakty</a></li></ul>
                 
                 
             </div>
@@ -269,7 +269,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="w3Ioad1o//Kzvbrn1L1MSCuOkZRO4BRCQAaLwpYUppwrJgo01djfT2PXc9vajg8zZLmtL4jgExRHcN0MC+lQMB4t371yTEYbrcvpdxW1O/iOLlD9Y7oejQ38c1um3oqT">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jYFhw6ejBbShtyJUeoE54l534H/ZcdqKFXCVssnBImyHT+xn8yDc+3MHU+V+MFUjOOzqRFe2N8cIBamQvyjtG6wscecdaI9Um0rVUg1VjgQoiejhD/eUg1x1wFsq1KFE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Díky, brzy se ti ozveme.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -378,7 +378,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/web-design-program.html">Website Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/web-design-program.html">Website Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
