--- a/mixer.html
+++ b/mixer.html
@@ -55,7 +55,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Novinky</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="pridej-se.html">Přidej se<br></a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="o-tymu.html">O týmu</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="co-je-frisbee.html">Co je frisbee?</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="treninky.html">Tréninky<br></a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page7.html">MIXÉR</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="kontakty.html">Kontakty</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="o-tymu.html">O týmu</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="co-je-frisbee.html">Co je frisbee?</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="treninky.html">Tréninky<br></a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="mixer.html">MIXÉR</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="kontakty.html">Kontakty</a></li></ul>
                 
                 
             </div>
