--- a/mixer.html
+++ b/mixer.html
@@ -92,7 +92,7 @@
             <div class="title col-md-12 col-lg-10">
                 
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Zveme Vás na jednodenní všelidový turnaj v sobotu 6. května v Horních Počernicích.<div>Hrát se bude od 9 do 17 hodin za každého počasí na umělé trávě na hřišti u ZŠ Chodovická/Ratibořická. Týmy se rozlosují z přihlášených hráčů. Vítáni jsou jak hráči mírně pokročilí, tak především začínající.</div><div>Budeme hrát na třech hřištích vedle sebe (na šířku fotbalového hřiště). Hřiště nemá plnou velikost, proto budeme hrát 4 na 4.</div><div>Doporučujeme lisovky případně tarfy. K dispozici bude toaleta a voda. Pokusíme se zajistit i nějaký stánek s občerstvením. Cena je nastavena na krásných 80 korun na osobu.</div></h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://forms.gle/28fhpyvYfebC5zHKA">Přihlášení</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://forms.gle/28fhpyvYfebC5zHKA" target="_blank">Přihlášení</a></div>
             </div>
         </div>
     </div>
@@ -108,7 +108,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6">
                         <div class="img-item mb-3">
-                            <img src="assets/images/kopie-nvrhu-pickup-4v4-1.png" alt="Mobirise Website Builder">
+                            <img src="assets/images/kopie-nvrhu-pickup-4v4-2.png" alt="Mobirise Website Builder">
                             <p class="mbr-fonts-style align-center mt-2 display-7"></p>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
