--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
                         <strong>Co nás čeká?</strong></h3>
                 <ul class="list mbr-fonts-style display-7">
-                    <li><strong>20.-21.1. MIXová halová liga (finále)</strong><br></li><li><strong>27.1. FUJárna</strong></li><li><strong>10.-11.2. Open/Women liga (kvalifikace)</strong></li><li><strong>17.2. EDGE turnaj Brno</strong></li><li><strong>26.-28. EDGE Games mezinárodní turnaj</strong></li><li><strong>25.-26.5. MIXová liga (kvalifikace)</strong></li><li><strong>8.-9.6. MIXová liga (finále)</strong></li><li><strong>3.-7.7. Soustředění</strong></li>
+                    <li><strong>27.1. FUJárna</strong><br></li><li><strong>10.-11.2. Open/Women liga (kvalifikace)</strong></li><li><strong>17.2. EDGE turnaj Brno</strong></li><li><strong>26.-28. EDGE Games mezinárodní turnaj</strong></li><li><strong>25.-26.5. MIXová liga (kvalifikace)</strong></li><li><strong>8.-9.6. MIXová liga (finále)</strong></li><li><strong>3.-7.7. Soustředění</strong></li>
                 </ul>
             </div>
         </div>
@@ -111,10 +111,22 @@
             <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5"></h5>
         </div>
         <div class="row mt-4">
-            <div class="item features-image сol-12 col-md-6 col-lg-6">
+            <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/snimek-obrazovky-2024-01-18-v12.46.37.png" alt="Mobirise Website Builder">
+                        <img src="assets/images/snimek-obrazovky-2024-01-24-v13.51.03-1.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7">Leden 2023</h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong><em>Finale MIX</em></strong></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Poletíme A - 7. místo ve 2. lize<br>Poletíme B - 4. místo ve 3. lize</p>
+                    </div>
+                    
+                </div>
+            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/snimek-obrazovky-2024-01-18-v12.46.37.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">Leden 2024</h5>
@@ -124,10 +136,10 @@
                     
                 </div>
             </div>
-            <div class="item features-image сol-12 col-md-6 col-lg-6">
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/snimek-obrazovky-2024-01-18-v12.46.21.png" alt="Mobirise Website Builder">
+                        <img src="assets/images/snimek-obrazovky-2024-01-18-v12.46.21.png" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">Prosinec 2023</h5>
@@ -521,7 +533,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
